# CogArch-SAR-TIAGo

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ros_test.yml
bags/: arm_jointstate.bag  audio.bag  force_sensor.bag  odometry.bag  scan_lidar.bag  sonar.bag  user_request.bag
docs/: api.html  architecture.html  communication.html  components.html  genindex.html  index.html  integration_testing.html  navigation_controller.html  objects.inv  overview.html  path_planner.html  py-modindex.html  real_time_alerts.html  search.html  searchindex.js  slam.html  speaker_service.html  structural_risk_assessment.html  triage_system.html  victim_detection.html
docs/_modules/: index.html
docs/_modules/scripts/: navigation_controller.html  path_planner.html  real_time_alerts.html  slam.html  speaker_service.html  structural_risk_assessment.html  triage_system.html  victim_detection.html
docs/_modules/tests/: integration_test.html
docs/_sources/: communication.rst.txt  components.rst.txt  index.rst.txt  integration_testing.rst.txt  navigation_controller.rst.txt  speaker_service.rst.txt  victim_detection.rst.txt
docs/source/: SLAM.rst  api.rst  conf.py  index.rst  integration_testing.rst  overview.rst  structural_risk_assessment.rst
launch/: bags.launch  nodes.launch
msg/: RiskReport.msg  TriageReport.msg
scripts/: navigation_controller.py  path_planner.py  real_time_alerts.py  slam.py  speaker_service.py  structural_risk_assessment.py  triage_system.py  victim_detection.py
srv/: Speaker.srv
tests/: integration_test.py  integration_test.test
